2006-02-03  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(get_metadata_type_name), (bacon_video_widget_get_metadata_string),
	(bacon_video_widget_get_metadata_int),
	(bacon_video_widget_get_metadata_bool),
	(bacon_video_widget_get_metadata):
	  Some more debug info. Also, when in metadata mode, answer yes to
	  have_audio and have_video queries if we have the respective
	  codec name available. That way some metadata is shown in the
	  properties dialog even if the decoders to play it are actually
	  not available.

2006-02-03  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (treeview_button_pressed),
	(totem_playlist_popup_menu), (totem_playlist_key_press):
	* src/totem.c: (totem_action_menu_popup),
	(totem_action_handle_key_press):
	Don't let the main window's key handler steal key shortcuts from
	the playlist widget, implement popup menus in the playlist, select the
	first menu item when popping up a menu (Closes: #323748)

2006-02-03  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_size_request), (poll_for_state_change_full),
	(poll_for_state_change), (bacon_video_widget_open_with_subtitle),
	(bvw_stop_play_pipeline), (bacon_video_widget_stop),
	(bacon_video_widget_close), (bvw_process_pending_tag_messages),
	(bacon_video_widget_get_metadata),
	(bacon_video_widget_can_get_frames),
	(bacon_video_widget_get_current_frame):
	  Don't wait in _get_metadata() for any state change to complete. It
	  might be called from the message handler via poll_for_state_change()
	  and then deadlock. Instead, wait in _open_with_subtitle() without
	  a timeout in case we are used as thumbnailer or for metadata
	  extraction (#329264). Also add bvw_stop_play_pipeline() to make sure
	  our message handler gets to see the state change messages when we
	  stop playback, so stuff gets cleaned up properly (otherwise the bus