@@ -1,6 +1,15 @@
 2006-02-03  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bvw_error_from_gst_error):
+	  Show a more meaningful error message when playback fails
+	  because the decoder/demuxer can only operate pull-based,
+	  but the source does not support that (e.g. playing AVI
+	  videos or FLAC files over the network) (#328830).
+
+2006-02-03  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
 	(get_metadata_type_name), (bacon_video_widget_get_metadata_string),
 	(bacon_video_widget_get_metadata_int),
 	(bacon_video_widget_get_metadata_bool),
